// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`en-pager 1`] = `null`;

exports[`en-pager 2`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="1"
        />
        <span
          class="pageCounter"
        >
          1 of 5
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`en-pager 3`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="12"
        />
        <span
          class="pageCounter"
        >
          12 of 17
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`en-pager 4`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="101"
        />
        <span
          class="pageCounter"
        >
          101 of 101
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ru-pager 1`] = `null`;

exports[`ru-pager 2`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="1"
        />
        <span
          class="pageCounter"
        >
          1 из 5
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ru-pager 3`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="12"
        />
        <span
          class="pageCounter"
        >
          12 из 17
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ru-pager 4`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="101"
        />
        <span
          class="pageCounter"
        >
          101 из 101
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`tr-pager 1`] = `null`;

exports[`tr-pager 2`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="1"
        />
        <span
          class="pageCounter"
        >
          Toplam 5 sayfadan 1. sayfa
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`tr-pager 3`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="12"
        />
        <span
          class="pageCounter"
        >
          Toplam 17 sayfadan 12. sayfa
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`tr-pager 4`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="101"
        />
        <span
          class="pageCounter"
        >
          Toplam 101 sayfadan 101. sayfa
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`uk-pager 1`] = `null`;

exports[`uk-pager 2`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="1"
        />
        <span
          class="pageCounter"
        >
          1 із 5
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`uk-pager 3`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="12"
        />
        <span
          class="pageCounter"
        >
          12 із 17
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`uk-pager 4`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="101"
        />
        <span
          class="pageCounter"
        >
          101 із 101
        </span>
      </div>
    </div>
  </div>
</div>
`;
